--- a/app/src/main/res/layout/country_list_item.xml
+++ b/app/src/main/res/layout/country_list_item.xml
@@ -5,6 +5,8 @@
 
         <TextView
             android:id="@+id/country_flag"
+            android:padding="16dp"
+            android:background="?attr/selectableItemBackground"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
