--- a/app/src/main/res/layout/activity_country_detail.xml
+++ b/app/src/main/res/layout/activity_country_detail.xml
@@ -39,14 +39,14 @@
                     android:orientation="vertical"
                     android:paddingBottom="8dp">
                     <TextView
-                        android:id="@+id/dog_name_text"
+                        android:id="@+id/country_name_text"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="2dp"
                         android:fontFamily="sans-serif-medium"
                         android:gravity="center"
                         android:padding="8dp"
-                        android:text="@{country.flag}"
+                        android:text="@{country.name.official}"
                         android:textColor="@color/text_black"
                         android:textSize="32sp" tools:text="Argentine Republic"/>
 
@@ -67,15 +67,16 @@
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:textColor="@color/text_black"
-                        android:text="@{Double.toString(country.population)}"
+                        android:text="@string/population"
                         android:textSize="16sp" tools:text="Habitantes: 45376763"/>
                     <TextView
+                        android:id="@+id/area"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
                         android:fontFamily="sans-serif-medium"
                         android:gravity="center"
-                        android:text="@{Double.toString(country.area)}"
+                        android:text="@string/area"
                         android:textColor="@color/text_black"
                         android:textSize="16sp" tools:text="Superficie: 2780400 km2"/>
                     <View
@@ -110,8 +111,9 @@
                                 style="@style/DetailSectionInfo"
                                 android:layout_width="117dp"
                                 android:layout_height="56dp"
-                                android:layout_marginTop="8dp"
-                                android:text="@{country.region}"
+                                android:layout_marginTop="1dp"
+                                android:gravity="center"
+                                android:text="@{country.borders.toString()}"
                                 tools:text="BOL,BRA,CHL,PRY,URY" />
 
                         </LinearLayout>
@@ -121,32 +123,44 @@
                             android:layout_marginStart="8dp"
                             android:layout_marginEnd="8dp"
                             android:background="@color/divider"/>
+
                         <LinearLayout
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_height="98dp"
                             android:gravity="center"
                             android:orientation="vertical">
-                            <TextView style="@style/DetailSectionName"
+
+                            <TextView
+                                style="@style/DetailSectionName"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="@string/region"/>
-                            <TextView style="@style/DetailSectionInfo"
+                                android:text="@string/region" />
+
+                            <TextView
+                                style="@style/DetailSectionInfo"
                                 android:layout_width="90dp"
                                 android:layout_height="wrap_content"
                                 android:gravity="center"
-                                android:text="@{country.region}" tools:text="America"/>
-                            <TextView style="@style/DetailSectionName"
+                                android:text="@{country.region}"
+                                tools:text="America" />
+
+                            <TextView
+                                style="@style/DetailSectionName"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="@string/subregion"/>
+                                android:text="@string/subregion" />
+
                             <TextView
-                                android:id="@+id/intelligence" style="@style/DetailSectionInfo"
+                                android:id="@+id/intelligence"
+                                style="@style/DetailSectionInfo"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="8dp"
-                                android:text="@{country.region}" tools:text="Sud America"/>
+                                android:text="@{country.subregion}"
+                                tools:text="Sud America" />
 
                         </LinearLayout>
+
                         <View
                             android:layout_width="1dp"
                             android:layout_height="60dp"
