--- a/app/src/main/res/layout/activity_country_list.xml
+++ b/app/src/main/res/layout/activity_country_list.xml
@@ -6,11 +6,22 @@
     <data>
 
     </data>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/country_recycler"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".countryList.CountryListActivity"/>
+        android:layout_height="match_parent">
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/country_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context=".countryList.CountryListActivity"/>
+
+        <ProgressBar
+            android:id="@+id/loading_wheel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"
+            android:visibility="gone"
+            android:layout_gravity="center" tools:visibility="visible"/>
+    </FrameLayout>
 
 </layout>
