--- a/app/src/main/res/layout/activity_country_detail.xml
+++ b/app/src/main/res/layout/activity_country_detail.xml
@@ -193,6 +193,7 @@
                                 android:id="@+id/translations" style="@style/DetailSectionInfo"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:gravity="center"
                                 android:layout_marginTop="8dp"
                                 android:text="@{country.translations.spa.official}" tools:text="Argentina"/>
 
