--- a/app/src/main/res/layout/activity_country_detail.xml
+++ b/app/src/main/res/layout/activity_country_detail.xml
@@ -126,7 +126,7 @@
 
                         <LinearLayout
                             android:layout_width="wrap_content"
-                            android:layout_height="98dp"
+                            android:layout_height="wrap_content"
                             android:gravity="center"
                             android:orientation="vertical">
 
@@ -155,7 +155,7 @@
                                 style="@style/DetailSectionInfo"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginTop="8dp"
+                                android:layout_marginTop="1dp"
                                 android:text="@{country.subregion}"
                                 tools:text="Sud America" />
 
@@ -167,35 +167,45 @@
                             android:layout_marginStart="8dp"
                             android:layout_marginEnd="8dp"
                             android:background="@color/divider"/>
+
                         <LinearLayout
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:gravity="center_horizontal"
                             android:orientation="vertical">
+
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:gravity="center"
                                 android:text="@string/fifa"
-                                android:textColor="@color/text_black"/>
+                                android:textColor="@color/text_black" />
+
                             <TextView
-                                android:id="@+id/weight" style="@style/DetailSectionInfo"
+                                android:id="@+id/weight"
+                                style="@style/DetailSectionInfo"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginTop="8dp"
-                                android:text="@{country.fifa}" tools:text="ARG"/>
-                            <TextView style="@style/DetailSectionName"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="@string/translations"/>
+                                android:layout_marginTop="1dp"
+                                android:text="@{country.fifa}"
+                                tools:text="ARG" />
+
                             <TextView
-                                android:id="@+id/translations" style="@style/DetailSectionInfo"
+                                style="@style/DetailSectionName"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:text="@string/translations" />
+
+                            <TextView
+                                android:id="@+id/translations"
+                                style="@style/DetailSectionInfo"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="1dp"
                                 android:gravity="center"
-                                android:layout_marginTop="8dp"
-                                android:text="@{country.translations.spa.official}" tools:text="Argentina"/>
+                                android:text="@{country.translations.spa.official}"
+                                tools:text="Argentina" />
 
                         </LinearLayout>
                     </LinearLayout>
@@ -211,7 +221,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal|bottom"
-            android:layout_margin="24dp"
+            android:layout_margin="28dp"
             android:elevation="4dp"
             android:src="@drawable/ic_check"
             android:importantForAccessibility="no" />
