--- a/app/src/main/res/drawable/detail_info_background.xml
+++ b/app/src/main/res/drawable/detail_info_background.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@android:color/white" />
+    <solid android:color="#0F000000" />
     <corners android:radius="4dp" />
 </shape>
