--- a/app/src/main/res/layout/activity_country_detail.xml
+++ b/app/src/main/res/layout/activity_country_detail.xml
@@ -19,15 +19,6 @@
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-                <ImageView
-                    android:id="@+id/country_coat"
-                    android:layout_width="wrap_content"
-                    android:layout_height="180dp"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="356dp"
-                    android:adjustViewBounds="true"
-                    android:elevation="8dp"
-                    android:contentDescription="@string/coat" />
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -210,6 +201,17 @@
                         </LinearLayout>
                     </LinearLayout>
                 </LinearLayout>
+
+                <ImageView
+                    android:id="@+id/country_coat"
+                    android:layout_width="wrap_content"
+                    android:layout_height="150dp"
+                    android:layout_gravity="bottom|center_horizontal"
+                    android:layout_marginTop="450dp"
+                    android:paddingTop="30dp"
+                    android:adjustViewBounds="true"
+                    android:elevation="8dp"
+                    android:contentDescription="@string/coat" />
             </FrameLayout>
         </ScrollView>
         <androidx.appcompat.widget.Toolbar
