--- a/app/src/main/res/layout/country_list_item.xml
+++ b/app/src/main/res/layout/country_list_item.xml
@@ -1,13 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="8dp">
+                <RelativeLayout
+                    android:id="@+id/country_list_item_layout"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:background="@drawable/country_list_item_background"
+                    android:gravity="center">
+                        <ImageView
+                            android:id="@+id/country_flags"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:adjustViewBounds="true"/>
+                </RelativeLayout>
+        </FrameLayout>
 
-
-        <TextView
-            android:id="@+id/country_name_text"
-            android:padding="16dp"
-            android:background="?attr/selectableItemBackground"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
 
 </layout>
