--- a/app/src/main/res/layout/activity_country_list.xml
+++ b/app/src/main/res/layout/activity_country_list.xml
@@ -6,9 +6,15 @@
     <data>
 
     </data>
-    <FrameLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <androidx.camera.view.PreviewView
+            android:id="@+id/camera_preview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/country_recycler"
             android:layout_width="match_parent"
@@ -22,6 +28,6 @@
             android:indeterminate="true"
             android:visibility="gone"
             android:layout_gravity="center" tools:visibility="visible"/>
-    </FrameLayout>
+    </RelativeLayout>
 
 </layout>
