--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,27 +12,40 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
+        <androidx.camera.view.PreviewView
+            android:id="@+id/camera_preview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/take_photo_fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_toEndOf="@id/back_home"
-            android:src="@drawable/baseline_photo_camera"
             android:layout_margin="16dp"
-
-            />
+            android:layout_toEndOf="@id/back_home_fab"
+            android:contentDescription="@string/photo_icon"
+            android:src="@drawable/baseline_photo_camera" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/back_home"
+            android:id="@+id/back_home_fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:src="@drawable/baseline_home"
             android:layout_margin="16dp"
-             />
+            android:contentDescription="@string/home_icon" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/search_fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_toStartOf="@id/back_home_fab"
+            android:src="@drawable/baseline_search"
+            android:layout_margin="16dp"
+            android:contentDescription="@string/search_icon" />
 
     </RelativeLayout>
 </layout>
