--- a/app/src/main/res/layout/activity_whole_image.xml
+++ b/app/src/main/res/layout/activity_whole_image.xml
@@ -13,6 +13,7 @@
             android:id="@+id/whole_image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:adjustViewBounds="true"
             android:contentDescription="@string/photo" />
 
     </FrameLayout>
